--- a/index.html
+++ b/index.html
@@ -11,6 +11,20 @@
 		/>
 		<!-- styles -->
 		<link rel="stylesheet" href="styles.css" />
+		<!-- Google tag (gtag.js) -->
+		<script
+			async
+			src="https://www.googletagmanager.com/gtag/js?id=G-EQLS5GHSHW"
+		></script>
+		<script>
+			window.dataLayer = window.dataLayer || [];
+			function gtag() {
+				dataLayer.push(arguments);
+			}
+			gtag("js", new Date());
+
+			gtag("config", "G-EQLS5GHSHW");
+		</script>
 	</head>
 	<body>
 		<section class="menu">
