update placeholder image

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 			<div class="section-center">
 				<!--single item-->
 				<article class="menu-item">
-					<img src="./images/starmap.png" alt="Starmap" class="photo" />
+					<img src="./images/cake1.jpg" alt="Starmap" class="photo" />
 					<div class="item-info">
 						<header>
 							<h4>Name</h4>
